--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="container">
@@ -14,8 +14,8 @@
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
-    <script src="jquery-3.5.1.min.js"></script>
-    <script src="main.js"></script>
+    <script src="../jquery-3.5.1.min.js"></script>
+    <script src="../main.js"></script>
     
 </body>
 </html>
