--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="container">
-    <iframe
-      width="20px"
-      height="20px"
-      src="https://www.youtube.com/embed/a2GujJZfXpg?autoplay=1"
-      frameborder="0"
-      allow="autoplay"
-    ></iframe>
+    <<iframe width="958" height="927" src="https://www.youtube.com/embed/a2GujJZfXpg?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <header>
       <div class="title">
