--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="container">
-   <iframe width="958" height="927" autoplay src="https://www.youtube.com/embed/a2GujJZfXpg?autoplay=1" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+   <iframe width="958" height="927" src="https://www.youtube.com/embed/a2GujJZfXpg?autoplay=1" frameborder="0" allow="autoplay"></iframe>
 
     <header>
       <div class="title">
