--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wallpaper</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="container">
-   <iframe width="958" height="927" src="https://www.youtube.com/embed/a2GujJZfXpg?autoplay=1" frameborder="0" allow="autoplay"></iframe>
+   <iframe width="958" height="927" src="https://www.youtube.com/embed/a2GujJZfXpg?autoplay=1&loop=1&rel=0" frameborder="0" allow="autoplay"></iframe>
 
     <header>
       <div class="title">
-        <h1>Hello, Welcome. Hope You Enjoy!</h1>
+        <h1>Hi, Welcome. Hope You Enjoy!</h1>
       </div>
     </header>
 
-    <div class="img-container"></div>
+    <div class="img-container">
+
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="jquery-3.5.1.min.js"></script>
-    <script src="main.js"></script>
+    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
 
